    rating that based on our experience.  
------------------------------------------------------------------------
r476 | dahnke | 2013-04-19 17:18:09

M       cg_vbm_defaults.m
M       cg_vbm_batch.m
M       cg_vbm_get_defaults.m
M       CHANGES.txt
M       cg_vbm_write.m

(1) Updated batch call from command line.
(2) Re-added missing mgT and mlT flags to cg_vbm_defaults.m
(3) Changed call job.extopts.BVC to cg_vbm_get_defaults('extopts.BVC')
    in cg_vbm_write.m
------------------------------------------------------------------------
r477 | gaser | 2013-04-22 11:10:08

M       CHANGES.txt
M       cg_vbm_write.m

Changed some handling with deformation field in cg_vbm_write.m.
------------------------------------------------------------------------
r478 | gaser | 2013-04-22 13:25:47

M       cg_vbm_batch.m
M       cg_vbm_run.m
M       CHANGES.txt
M       cg_vbm_batch.sh

Updated batch system.
------------------------------------------------------------------------
r479 | gaser | 2013-04-22 17:09:04

M       CHANGES.txt
M       cg_vbm_defaults.m
M       cg_vbm_write.m
A       findfiles.m
A       vbm_io_cprintf.m
M       vbm_io_writenii.m
M       vbm_io_xml.m
A       vbm_vol_t1qacalc.m

(1) Added group expectation maps - a difference map between tissue probability 
    map and the final label map. 
(2) Minor changes and corrections for variable names.
(3) Added quality assurance routines.
(4) Update error messages for vbm_io_xml.
(5) Add vbm_io_cfprintf for colored command line output.
(6) Update final figure output.

------------------------------------------------------------------------
r480 | dahnke | 2013-04-22 18:17:05

M       CHANGES.txt
M       cg_vbm_write.m
M       tbx_cfg_vbm.m
M       vbm_vol_t1qacalc.m

(1) Minor changes and corrections for variable names.
(2) Updates for VBM12i skull stripping to get more brain tissue.
------------------------------------------------------------------------
r481 | dahnke | 2013-04-23 09:58:22